Commando: Fix titles not cropping when they're too long
(integrated from trunk branch change 07294ea by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -101,6 +101,9 @@ richlistbox#commando-results
         {
             font-size: 120%;
             margin: 0 0 0 6px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         .icon
